--- a/menus/package.json
+++ b/menus/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.4",
+    "cors": "^2.8.6",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
